@@ -1,5 +1,4 @@
-# Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001
-# 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
+# Copyright (C) 1992-2015 Free Software Foundation, Inc.
 #
 # This file is part of DejaGnu.
 #
@@ -195,6 +194,7 @@ baseboard_DATA = \
 	baseboards/unix.exp \
 	baseboards/usparc-cygmon.exp \
 	baseboards/v850-sim.exp \
+	baseboards/visium-sim.exp \
 	baseboards/vr4100-ddb.exp \
 	baseboards/vr4100-sim.exp \
 	baseboards/vr4111-sim.exp \
