@@ -1,0 +1,43 @@
+# Copyright (C) 2013-2015 Free Software Foundation, Inc.
+#
+# This file is part of DejaGnu.
+#
+# DejaGnu is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# DejaGnu is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with DejaGnu; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
+
+# This is a list of toolchains that are supported on this board.
+set_board_info target_install {visium-elf}
+
+# Load the generic configuration for this board, This will define a basic
+# set of routines needed by the tool to communicate with the board.
+load_generic_config "sim"
+
+# basic-sim.exp is a basic description for the simulator.
+load_base_board_description "basic-sim"
+
+# The name of the simulator is "visium".
+setup_sim visium
+
+# No multilib flags needed by default.
+process_multilib_options ""
+
+set_board_info compiler "[find_gcc]"
+set_board_info cflags   "[libgloss_include_flags] [newlib_include_flags]"
+set_board_info ldflags  "-msim [libgloss_link_flags] [newlib_link_flags]"
+
+# No support for signals on this target.
+set_board_info gdb,nosignals 1
+
+# Used by a few gcc.c-torture testcases to delimit how large the stack can be.
+set_board_info gcc,stack_size 65536
